--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "sdkVersion": "27.0.0",
-    "name": "TMDB",
+    "name": "MoTrailers",
     "icon": "assets/icons/tmdb.png"
   }
 }
