--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "expo": {
     "sdkVersion": "27.0.0",
     "name": "MoTrailers",
-    "icon": "assets/icons/tmdb.png"
+    "icon": "assets/images/logo.png"
   }
 }
