--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@expo/vector-icons": "^6.3.1",
     "expo": "^27.0.1",
     "expo-cli": "^2.10.1",
+    "npm": "^6.8.0",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
