--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-snap-carousel": "^3.7.1",
+    "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^3.2.3",
     "uuid": "^3.2.1"
   }
