--- a/app.json
+++ b/app.json
@@ -2,9 +2,12 @@
   "expo": {
     "sdkVersion": "27.0.0",
     "name": "MoTrailers",
-    "icon": "assets/images/logo.png"
-  },
-  "splash": {
-    "image": "assets/images/splash.png"
+    "icon": "assets/images/logo.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#454545"
+    }
   }
+ 
 }
