--- a/package.json
+++ b/package.json
@@ -7,26 +7,27 @@
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "expo start",
+    "eject": "expo eject",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "test": "jest"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^6.3.1",
-    "expo": "^27.0.1",
+    "@expo/vector-icons": "10.0.0",
+    "expo": "^34.0.1",
     "expo-cli": "^2.10.1",
     "native-base": "^2.12.0",
     "npm": "^6.8.0",
     "prop-types": "^15.6.1",
-    "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-snap-carousel": "^3.7.1",
     "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^3.2.3",
